--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "symfony/console": "^3.4",
     "league/container": "^3.2",
     "php": "7.0.* || 7.1.* || 7.2.*",
-    "ext-simplexml": "*"
+    "ext-simplexml": "*",
+    "ext-libxml": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
