--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "project",
   "config": {
     "platform": {
-      "php": "7.0.30"
+      "php": "7.1.0"
     },
     "optimize-autoloader": true
   },
@@ -43,7 +43,7 @@
   "require": {
     "symfony/console": "^3.4",
     "league/container": "^3.2",
-    "php": "7.0.* || 7.1.* || 7.2.* || 7.3.*",
+    "php": "7.1.* || 7.2.* || 7.3.*",
     "ext-simplexml": "*",
     "ext-libxml": "*"
   },
