[FEATURE] add RsyncCommand::fromAppInstances

--- a/docker/testCaseD/docker-compose.yml
+++ b/docker/testCaseD/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     build: .
     volumes:
       - "./authorized_keys:/home/user/.ssh/authorized_keys"
+      - "./testApp:/var/www/prod"
+      - "./testApp:/var/www/testing"
     networks:
       - hostBC
       - database
