--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "platform": {
       "php": "7.1.0"
     },
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "process-timeout": 0
   },
   "authors": [
     {
@@ -26,7 +27,7 @@
     "test": "vendor/bin/phpunit -c tests/phpunit.xml",
     "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox",
     "test:update": "vendor/bin/phpunit -c tests/phpunit.xml --colors=always -d --update-snapshots",
-    "codecept" : "vendor/bin/codecept run",
+    "codecept": "vendor/bin/codecept run",
     "su:sync": "./phpsu sync",
     "su:sync:dry": "./phpsu sync --dry-run"
   },
