--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 7.3
 
 install: composer i
-script: composer test
+script: vendor/bin/grumphp run && composer test
 
 cache:
   directories:
