--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "project",
   "config": {
     "platform": {
-      "php": "7.1.0"
+      "php": "7.1.3"
     },
     "optimize-autoloader": true,
     "process-timeout": 0
@@ -43,9 +43,9 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "^3.4",
-    "league/container": "^3.2",
-    "php": "7.1.* || 7.2.* || 7.3.*",
+    "symfony/console": "4.*",
+    "league/container": "3.*",
+    "php": ">=7.1.3 <7.4",
     "ext-simplexml": "*",
     "ext-libxml": "*"
   },
