--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,7 @@
   ],
   "scripts": {
     "test": "vendor/bin/phpunit -c tests/phpunit.xml --testdox --color=always",
-    "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox",
-    "test:update": "vendor/bin/phpunit -c tests/phpunit.xml --colors=always -d --update-snapshots",
-    "codecept": "vendor/bin/codecept run",
-    "su:sync": "./phpsu sync",
-    "su:sync:dry": "./phpsu sync --dry-run"
+    "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox"
   },
   "autoload": {
     "psr-4": {
@@ -44,17 +40,11 @@
   "minimum-stability": "stable",
   "require": {
     "symfony/console": "4.*",
-    "league/container": "3.*",
-    "php": ">=7.1.3 <7.4",
-    "ext-simplexml": "*",
-    "ext-libxml": "*"
+    "php": ">=7.1.3 <7.4"
   },
   "require-dev": {
     "phpunit/phpunit": "7.*",
-    "codeception/codeception": "^2.4",
-    "spatie/phpunit-snapshot-assertions": "^1.3",
     "pluswerk/grumphp-config": "^2.7",
-    "roave/security-advisories": "dev-master",
     "spatie/phpunit-watcher": "^1.8"
   },
   "extra": {
