--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,15 @@
 {
   "name": "phpsu/phpsu",
-  "license": "LGPL-2.0-or-later",
-  "description": "php sync utility",
-  "type": "project",
+  "license": "MIT",
+  "description": "Synchronisation Utility: File and Database",
+  "type": "library",
+  "keywords": [
+    "phpsu",
+    "rsync",
+    "mysql",
+    "mysqldump"
+  ],
+  "homepage": "https://phpsu.de/",
   "config": {
     "platform": {
       "php": "7.1.3"
@@ -13,11 +20,13 @@
   "authors": [
     {
       "name": "Matthias Vogel",
-      "email": "git@kanti.de"
+      "email": "git@kanti.de",
+      "role": "Developer"
     },
     {
       "name": "Christian Benthake",
-      "email": "git@cben.co"
+      "email": "git@cben.co",
+      "role": "Developer"
     }
   ],
   "bin": [
@@ -44,8 +53,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "7.*",
-    "pluswerk/grumphp-config": "^2.7",
-    "spatie/phpunit-watcher": "^1.8"
+    "pluswerk/grumphp-config": "2.*",
+    "spatie/phpunit-watcher": "1.*"
   },
   "extra": {
     "pluswerk/grumphp-config": {
