--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "4.*",
+    "symfony/console": "^4.2.0",
     "php": ">=7.1.3 <7.4"
   },
   "require-dev": {
