--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
   "minimum-stability": "stable",
   "require": {
     "symfony/console": "^4.2.0",
+    "symfony/process": "^4.2.0",
     "php": ">=7.1.3 <7.4"
   },
   "require-dev": {
