--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
   "require": {
     "symfony/console": "^4.2.0",
     "symfony/process": "^4.2.0",
-    "php": ">=7.1.3 <7.4"
+    "php": ">=7.1.3 <7.4",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "7.*",
