--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
   "minimum-stability": "stable",
   "require": {
     "symfony/console": "~3.2|^4.2.0",
-    "symfony/process": "~3.2|^4.2.0",
+    "symfony/process": "^3.2.0|^4.2.0",
     "php": ">=7.1.3 <7.4",
     "ext-json": "*"
   },
