--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,8 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "^3.2.0|^4.2.0",
-    "symfony/process": "^3.2.0|^4.2.0",
+    "symfony/console": ">=3.2.0 <=4.2",
+    "symfony/process": ">=3.2.0 <=4.2",
     "php": ">=7.1.3 <7.4",
     "ext-json": "*"
   },
