:white_check_mark::heavy_plus_sign: add infection to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ cache:
 
 install: composer i --no-suggest
 
-script: vendor/bin/grumphp run && composer test
+script:
+  - vendor/bin/grumphp run
+  - composer test
+  - composer infection
 
 after_success: bash <(curl -s https://codecov.io/bash)
