--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
   "autoload": {
     "psr-4": {
       "PHPSu\\": "src"
-    }
+    },
+    "files": ["src/polyfill.php"]
   },
   "autoload-dev": {
     "psr-4": {
