:ok_hand: Apply suggestions from code review

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
     "psr-4": {
       "PHPSu\\": "src"
     },
-    "files": ["src/polyfill.php"]
+    "files": [
+      "src/Polyfills/auto-polyfill.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
