--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+  - "7.0"
   - "7.1"
   - "7.2"
   - "7.3"
@@ -14,6 +15,12 @@ env:
     - SYMFONY_VERSION="3.2.*"
     - SYMFONY_VERSION="3.4.*"
     - SYMFONY_VERSION="4.2.*"
+
+matrix:
+  exclude:
+    - php: "7.0"
+      env: SYMFONY_VERSION="4.2.*"
+
 
 install: composer require symfony/process:$SYMFONY_VERSION symfony/console:$SYMFONY_VERSION
 
