--- a/composer.json
+++ b/composer.json
@@ -60,9 +60,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "7.*",
+    "phpunit/php-invoker": "^2.0",
     "pluswerk/grumphp-config": "2.*",
     "spatie/phpunit-watcher": "1.*",
-    "infection/infection": "0.12.*",
+    "infection/infection": "0.11.* | 0.12.*",
     "phpstan/phpstan": "^0.11.2"
   },
   "extra": {
