--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,8 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "3.2.* | 3.4.* | 4.2.*",
-    "symfony/process": "3.2.* | 3.4.* | 4.2.*",
+    "symfony/console": ">=3.2.0 <4.4.0",
+    "symfony/process": ">=3.2.0 <4.4.0",
     "php": ">=7.0.0 <7.4",
     "ext-json": "*"
   },
