--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
+	excludes_analyse:
+		- src/Polyfills/ConsoleSectionOutput.php
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors:
 		- '#Access to an undefined property PHPSu\\Config\\SshConfig::\$[a-zA-Z0-9_]+#'
