--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,12 @@
     "infection": "vendor/bin/infection --threads=4 --only-covered --min-msi=91 --min-covered-msi=91 --ansi",
     "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --level max src --ansi",
     "bin": "echo ''",
-    "post-install-cmd": ["@composer bin all install --ansi"],
-    "post-update-cmd": ["@composer bin all update --ansi"]
+    "post-install-cmd": [
+      "@composer bin all install --ansi"
+    ],
+    "post-update-cmd": [
+      "@composer bin all update --ansi"
+    ]
   },
   "autoload": {
     "psr-4": {
@@ -53,14 +57,17 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "3.2.* | 3.4.* | 4.2.*",
-    "symfony/process": "3.2.* | 3.4.* | 4.2.*",
-    "php": ">=7.0.0 <7.5",
+    "symfony/console": "^4.0 | ^5.0",
+    "symfony/process": "^4.0 | ^5.0",
+    "php": ">=7.2 <7.5",
     "ext-json": "*"
   },
   "require-dev": {
-    "pluswerk/grumphp-config": "2.*",
+    "pluswerk/grumphp-config": "^3.0",
     "bamarni/composer-bin-plugin": "^1.2"
+  },
+  "suggest": {
+    "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
   },
   "extra": {
     "pluswerk/grumphp-config": {
