--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,7 @@
     "test": "vendor/bin/phpunit -c tests/phpunit.xml --testdox --color=always",
     "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox",
     "infection": "vendor/bin/infection --threads=4 --only-covered --min-msi=91 --min-covered-msi=91 --ansi",
-    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --level max src --ansi",
-    "bin": "echo ''",
-    "post-install-cmd": [
-      "@composer bin all install --ansi"
-    ],
-    "post-update-cmd": [
-      "@composer bin all update --ansi"
-    ]
+    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --level max src --ansi"
   },
   "autoload": {
     "psr-4": {
@@ -57,12 +50,16 @@
     "symfony/console": "^4.0 | ^5.0",
     "symfony/process": "^4.0 | ^5.0",
     "php": ">=7.2 <7.5",
-    "ext-json": "*"
+    "ext-json": "*",
+    "phpunit/phpunit": "^8.0"
   },
   "require-dev": {
     "pluswerk/grumphp-config": "^3.0",
-    "bamarni/composer-bin-plugin": "^1.2",
-    "rector/rector-prefixed": "^0.7.14"
+    "rector/rector-prefixed": "^0.7.14",
+    "spatie/phpunit-watcher": "^1.22",
+    "phpunit/php-invoker": "^3.0",
+    "phpstan/phpstan": "^0.12.18",
+    "infection/infection": "^0.16.2"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
