--- a/composer.json
+++ b/composer.json
@@ -50,15 +50,16 @@
     "symfony/console": "^4.0 | ^5.0",
     "symfony/process": "^4.0 | ^5.0",
     "php": ">=7.2 <7.5",
-    "ext-json": "*",
-    "phpunit/phpunit": "^8.0"
+    "ext-json": "*"
   },
   "require-dev": {
     "pluswerk/grumphp-config": "^3.0",
     "rector/rector-prefixed": "^0.7.14",
     "spatie/phpunit-watcher": "^1.22",
     "phpstan/phpstan": "^0.12.18",
-    "infection/infection": "^0.15.3"
+    "infection/infection": "^0.15.3",
+    "phpunit/php-invoker": "^2.0 | ^3.0",
+    "phpunit/phpunit": "^8.5"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
