--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     "symfony/console": "^4.0 | ^5.0",
     "symfony/process": "^4.0 | ^5.0",
     "php": ">=7.2 <7.5",
-    "ext-json": "*"
+    "ext-json": "*",
+    "phpsu/shellcommandbuilder": "^1.2"
   },
   "require-dev": {
     "pluswerk/grumphp-config": "^3.0",
