--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - "7.2"
   - "7.3"
   - "7.4"
+  - "nightly"
 
 cache:
   directories:
@@ -13,6 +14,10 @@ env:
   matrix:
     - SYMFONY_VERSION="4.4.*"
     - SYMFONY_VERSION="5.0.*"
+
+matrix:
+  allow_failures:
+    - php: nightly
 
 install: composer require symfony/process:$SYMFONY_VERSION symfony/console:$SYMFONY_VERSION
 
