--- a/composer.json
+++ b/composer.json
@@ -49,9 +49,9 @@
   "require": {
     "symfony/console": "^4.0 | ^5.0",
     "symfony/process": "^4.0 | ^5.0",
-    "php": ">=7.2 <7.5",
+    "php": ">=7.2",
     "ext-json": "*",
-    "phpsu/shellcommandbuilder": "^1.2"
+    "phpsu/shellcommandbuilder": "^1.3"
   },
   "require-dev": {
     "pluswerk/grumphp-config": "^3.0",
