--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
   "require": {
     "symfony/console": "^4.0 | ^5.0",
     "symfony/process": "^4.0 | ^5.0",
-    "php": ">=7.2",
+    "php": "^7.2 || ~8.0.0",
     "ext-json": "*",
     "phpsu/shellcommandbuilder": "^1.3"
   },
@@ -60,7 +60,7 @@
     "phpstan/phpstan": "^0.12.18",
     "infection/infection": "^0.15.3",
     "phpunit/php-invoker": "^2.0 | ^3.0",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^8.5 || ^9.0"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
