--- a/rector.yml
+++ b/rector.yml
@@ -2,6 +2,7 @@ parameters:
   sets:
     - 'code-quality'
     - 'dead-code'
+    - 'php72'
     - 'php73'
     - 'php74'
   php_version_features: '7.2'
