--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     "phpsu/shellcommandbuilder": "^1.3"
   },
   "require-dev": {
-    "pluswerk/grumphp-config": "^3.0 || ^4.0",
+    "pluswerk/grumphp-config": "^4.0",
     "rector/rector-prefixed": "^0.7.14",
     "spatie/phpunit-watcher": "^1.22",
     "phpstan/phpstan": "^0.12.18",
