tty in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           composer2 install
           composer2 require symfony/process:${{ matrix.php[2] }} symfony/console:${{ matrix.php[2] }}
+      - uses: Yuri6037/Action-FakeTTY@v1
       - name: Execute tests
         run: |
           vendor/bin/grumphp run
