tty in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,11 +47,10 @@ jobs:
           composer2 require symfony/process:${{ matrix.php[2] }} symfony/console:${{ matrix.php[2] }}
       - name: Execute tests
         run: |
-          echo "display_errors = 1" > /opt/docker/etc/php/php.webdevops.ini
-          xdebug-enable
+          echo "xdebug.mode=coverage" > /opt/docker/etc/php/php.webdevops.ini
           vendor/bin/grumphp run
           script -q -e -c "/usr/local/bin/composer test"
-          script -q -e -c "/usr/local/bin/composer infection8.0"
+          script -q -e -c "/usr/local/bin/composer infection"
           script -q -e -c "/usr/local/bin/composer phpstan"
       - uses: codecov/codecov-action@v1
         with:
