--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
   "require-dev": {
     "pluswerk/grumphp-config": "^4.0 | ^5.0",
     "rector/rector-prefixed": "^0.7 | ^0.10",
-    "spatie/phpunit-watcher": "^1.22",
+    "spatie/phpunit-watcher": "1.22.0 | ^1.23.1",
     "phpstan/phpstan": "^0.12.18",
     "infection/infection": "^0.15.3 | ^0.20",
     "phpunit/php-invoker": "^2.0 | ^3.0",
