--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         if: ${{ matrix.php[1] == 'v1' }}
         run: |
           composer1 install
-          composer1 require symfony/process:${{ matrix.php[2] }} symfony/console:${{ matrix.php[2] }}
+          composer1 require symfony/process:${{ matrix.php[2] }} symfony/console:${{ matrix.php[2] }} spatie/phpunit-watcher:1.23.0
       - name: Install dependencies for Symfony ${{ matrix.php[2] }}
         if: ${{ matrix.php[1] == 'v2' }}
         run: |
