--- a/composer.json
+++ b/composer.json
@@ -48,20 +48,21 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "symfony/console": "^4.0 | ^5.0",
-    "symfony/process": "^4.0 | ^5.0",
-    "php": "^7.2 || ~8.0.0",
+    "php": "^7.4 || ^8.0.0",
     "ext-json": "*",
-    "phpsu/shellcommandbuilder": "^2.0"
+    "composer-runtime-api": "^2.0.0",
+    "phpsu/shellcommandbuilder": "^2.0",
+    "symfony/console": "^5.0",
+    "symfony/process": "^5.0"
   },
   "require-dev": {
-    "pluswerk/grumphp-config": "^4.0",
-    "rector/rector-prefixed": "^0.7.14",
-    "spatie/phpunit-watcher": "^1.22",
-    "phpstan/phpstan": "^0.12.18",
-    "infection/infection": "^0.15.3",
-    "phpunit/php-invoker": "^2.0 | ^3.0",
-    "phpunit/phpunit": "^8.5 || ^9.0"
+    "pluswerk/grumphp-config": "^5.0",
+    "rector/rector": "^0.11",
+    "spatie/phpunit-watcher": "^1.23",
+    "phpstan/phpstan": "^0.12.94",
+    "infection/infection": "^0.24.0",
+    "phpunit/php-invoker": "^3.1",
+    "phpunit/phpunit": "^9.0"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
