--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: pluswerk/php-dev:nginx-${{ matrix.php[0] }}
+      image: pluswerk/php-dev:nginx-${{ matrix.php }}
       options: -t
     strategy:
       fail-fast: true
