Fix composer.json 8.0 to only batch versions
Co-authored-by: Matthias Vogel <git@kanti.de>

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.4 || ^8.0.0",
+    "php": "^7.4 || ~8.0.0",
     "ext-json": "*",
     "composer-runtime-api": "^2.0.0",
     "phpsu/shellcommandbuilder": "^2.0",
