--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,12 @@
   "homepage": "https://phpsu.de/",
   "config": {
     "optimize-autoloader": true,
-    "process-timeout": 0
+    "process-timeout": 0,
+    "allow-plugins": {
+      "phpro/grumphp": true,
+      "infection/extension-installer": true,
+      "pluswerk/grumphp-config": true
+    }
   },
   "authors": [
     {
@@ -31,10 +36,10 @@
     "phpsu"
   ],
   "scripts": {
-    "test": "vendor/bin/phpunit -c tests/phpunit.xml --testdox --color=always",
+    "test": "XDEBUG_MODE=coverage vendor/bin/phpunit -c tests/phpunit.xml --testdox --color=always",
     "test:watch": "vendor/bin/phpunit-watcher watch -c tests/phpunit.xml --testdox",
-    "infection": "vendor/bin/infection --threads=4 --only-covered --min-msi=89 --min-covered-msi=89 --ansi",
-    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --level max src tests --ansi"
+    "infection": "XDEBUG_MODE=coverage vendor/bin/infection --threads=4 --only-covered --min-msi=89 --min-covered-msi=89 --ansi",
+    "phpstan": "vendor/bin/phpstan  --ansi"
   },
   "autoload": {
     "psr-4": {
@@ -48,7 +53,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.4 || ~8.0.0",
+    "php": "~7.4.0 || ~8.0.0 || ~8.1.0",
     "ext-json": "*",
     "composer-runtime-api": "^2.0.0",
     "phpsu/shellcommandbuilder": "^2.0",
@@ -57,9 +62,9 @@
   },
   "require-dev": {
     "pluswerk/grumphp-config": "^5.0",
-    "rector/rector": "^0.11",
+    "rector/rector": "^0.12.20",
     "spatie/phpunit-watcher": "^1.23",
-    "phpstan/phpstan": "^0.12.94",
+    "phpstan/phpstan": "^1.5.4",
     "infection/infection": "^0.24.0",
     "phpunit/php-invoker": "^3.1",
     "phpunit/phpunit": "^9.0"
