--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,8 @@
 parameters:
-    parallel:
-        maximumNumberOfProcesses: 4
-    reportUnmatchedIgnoredErrors: false
-    ignoreErrors:
-        - '#Access to an undefined property PHPSu\\Config\\SshConfig::\$[a-zA-Z0-9_\*]+#'
+  level: max
+  paths:
+    - src
+    - tests
+  reportUnmatchedIgnoredErrors: true
+  ignoreErrors:
+    - '#Access to an undefined property PHPSu\\Config\\SshConfig::\$[a-zA-Z0-9_\*]+#'
