--- a/composer.json
+++ b/composer.json
@@ -57,17 +57,17 @@
     "ext-json": "*",
     "composer-runtime-api": "^2.0.0",
     "phpsu/shellcommandbuilder": "^2.0",
-    "symfony/console": "^5.0",
-    "symfony/process": "^5.0"
+    "symfony/console": "^5.0 || ^6.0",
+    "symfony/process": "^5.0 || ^6.0"
   },
   "require-dev": {
-    "pluswerk/grumphp-config": "^5.0",
-    "rector/rector": "^0.12.20",
-    "spatie/phpunit-watcher": "^1.23",
-    "phpstan/phpstan": "^1.5.4",
-    "infection/infection": "^0.24.0",
-    "phpunit/php-invoker": "^3.1",
-    "phpunit/phpunit": "^9.0"
+    "pluswerk/grumphp-config": "^5.0.2",
+    "rector/rector": "^0.12.23",
+    "spatie/phpunit-watcher": "^1.23.6",
+    "phpstan/phpstan": "^1.9.3",
+    "infection/infection": "^0.26.0",
+    "phpunit/php-invoker": "^3.1.1",
+    "phpunit/phpunit": "^9.5.27"
   },
   "suggest": {
     "bamarni/composer-bin-plugin": "Dependency-Independent use of phpsu"
